# MARC-FS

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  abstract_storage.cpp  abstract_storage.h  account.cpp  account.h  api.cpp  api.h  api_cloudfile.cpp  api_cloudfile.h  api_shard.cpp  api_shard.h  blocking_queue.cpp  blocking_queue.h  file_storage.cpp  file_storage.h  fscache.cpp  fscache.h  fuse-marcfs.spec  fuse_hooks.cpp  fuse_hooks.h  main.cpp  marc_api.cpp  marc_api.h  marc_api_cloudfile.cpp  marc_api_cloudfile.h  marc_api_shard.cpp  marc_api_shard.h  marc_dir_node.cpp  marc_dir_node.h  marc_dummy_node.cpp  marc_dummy_node.h  marc_file_node.cpp  marc_file_node.h  (+17 more)
CMakeModules/: FindCURLCPP.cmake  FindFUSE.cmake  FindJSONCPP.cmake
contrib/curlcpp/: CURLCPP.cbp  cmake_install.cmake  curlcppConfig.cmake
contrib/curlcpp/include/: curl_form.h
contrib/curlcpp/src/: cmake_install.cmake  curl_form.cpp
distribution/archlinux/: PKGBUILD
distribution/fedora/: fuse-marcfs.spec
distribution/universal/appimage/: marcfs.yml
doc/: shard_response.sample.json
src/: abstract_storage.cpp  abstract_storage.h  account.cpp  account.h  file_storage.cpp  file_storage.h  fuse_hooks.cpp  fuse_hooks.h  main.cpp  marc_api_cloudfile.cpp  marc_api_cloudfile.h  marc_api_shard.cpp  marc_api_shard.h  marc_dir_node.cpp  marc_dir_node.h  marc_file_node.cpp  marc_file_node.h  marc_node.cpp  marc_node.h  marc_rest_client.cpp  marc_rest_client.h  memory_storage.cpp  memory_storage.h  mru_cache.cpp  mru_cache.h  object_pool.cpp  object_pool.h  thread_pool.h  utils.cpp  utils.h
tests/: apitest.cpp  fstest.py
